Revamped Timers page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wwm-helper",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "license": "AGPL-3.0-only",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,9 +17,7 @@
     "overrides": [
       {
         "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
+        "options": { "parser": "angular" }
       }
     ]
   },
