--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "overrides": [
       {
         "files": "*.html",
-        "options": { "parser": "angular" }
+        "options": {
+          "parser": "angular"
+        }
       }
     ]
   },
@@ -30,6 +32,7 @@
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.0.1",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "bootstrap": "^5.3.8",
